modernized battles
	-fairy type (Lunos)
	-physical special split (voloved)
	-exp for catching Pokemon (Lunos)
	-faster hp drain (SatoMew)
	-no more low hp beeping

better encounters
	-entirely new encounter table, inspired by ORAS
	-some national dex pokemon can be found throughout the game
	-starters can be caught in petalburg, jagged pass, and route 119

better running
	-run indoors
	-run without running shoes
	-no more running shoes tutorial

hotkeys
	-pressing b in a battle moves your cursor to "run" (voloved)

misc modernizations
	-reusable TMs (Lunos)
 	-forgettable HMs (Lunos, thespbgamer, Jaizu)
	-prompt for reusing repels (ExpoSeed)
	-faster text speed (ellabrella)

bugfixes
	-general bugfixes (built into decomp)
	-improved waitforvblank function, saving battery life and increasing fast forward speed (DizzyEggg)
	-ground effects are applied when you exit surfing (ghoulslash)
	-allow player to change direction while moving up or down (cbt)